actualizacion de rutas

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss Scss/estilos.scss Css/estilo.css",
+    "build-css": "node-sass --include-path scss Scss/estilos.scss css/estilo.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "author": "",
